<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="main_activity_title">My Nano Degree Apps</string>

    <string name="btn_label_spotify_streamer">Spotify Streamer</string>
    <string name="btn_label_scores">Scores App</string>
    <string name="btn_label_library">Library App</string>
    <string name="btn_label_bib">Build It Bigger</string>
    <string name="btn_label_xyz_reader">XYZ Reader</string>
    <string name="btn_label_capstone">Capstone</string>
</resources>
