<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main" tools:context=".MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/main_activity_title"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:onClick=""
            />

        <Button
            android:text="@string/btn_label_spotify_streamer"
            android:id="@+id/btnSpotify"
            android:layout_below="@+id/textView"
            android:onClick="showToast"
            style="@style/MainButton"
            />

        <Button
            android:text="@string/btn_label_scores"
            android:id="@+id/btnScores"
            android:layout_below="@+id/btnSpotify"
            android:onClick="showToast"
            style="@style/MainButton"
            />

        <Button
            android:text="@string/btn_label_library"
            android:id="@+id/btnLibrary"
            android:layout_below="@+id/btnScores"
            android:onClick="showToast"
            style="@style/MainButton"
            />


        <Button
            android:text="@string/btn_label_xyz_reader"
            android:id="@+id/btnXYZ"
            android:layout_below="@+id/btnLibrary"
            android:onClick="showToast"
            style="@style/MainButton"
            />

        <Button
            android:text="@string/btn_label_bib"
            android:id="@+id/btnBIB"
            android:layout_below="@+id/btnXYZ"
            android:onClick="showToast"
            style="@style/MainButton"
            />

        <Button
            android:text="@string/btn_label_capstone"
            android:id="@+id/btnCapstone"
            android:layout_below="@+id/btnBIB"
            android:background="@color/mainButtonSpecial"
            android:onClick="showToast"
            style="@style/MainButton"
            />

    </RelativeLayout>
</ScrollView>
